# dns-is-reverse

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  test.conf  verify.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dockerhub-description.yml
dns_is_reverse/: __init__.py  cli.py  config.py  dns_server.py  parser.py  reverse.py  synth.py  upstream.py
tests/: test_aaaa_synthesis.py  test_config_parser.py  test_end_to_end_handler.py  test_ip6arpa_codec.py  test_ptr_synthesis.py  test_template_matching.py  test_upstream_fallback.py
