[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-is-reverse"
version = "1.0.0"
description = "Python reimplementation of all-knowing-dns: authoritative DNS server for IPv6 reverse DNS synthesis"
authors = [{name = "DNS Reverse Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnslib>=0.9.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.scripts]
dns-is-reverse = "dns_is_reverse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dns_is_reverse*"]

[tool.mypy]
python_version = "3.11"
strict = true